# Oroitz

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  To-Do.md  build.ps1  manual_testing_feedback.txt  oroitz_results_eb91da12-46a2-4105-b16a-962cc463cb84.json  package.json  pyproject.toml  results_accounts_memdump.json  results_quick_triage_memdump.json  test-real-results.json  test_tui_runner.py  test_ui_validation.py  test_volatility.py  windows-sample-memory.dmp
.github/: dependabot.yml
.github/instructions/: .instructions.md
.github/prompts/: .prompt.md
.github/workflows/: ci.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  gemini-review.yml.disabled  gemini-scheduled-triage.yml  gemini-triage.yml  lint.yml  release.yml  samples-smoke.yml  security.yml
Oroitz.wiki/: ADR-0001-Language-and-Runtime.md  ADR-0003-Interface-Tooling.md  ADR-0004-Retry-and-Fallback.md  GUI-Guide.md  GUI-Plan.md  Getting-Started.md  Home.md  Product-Specification.md  Project-Structure-Guide.md  README.md  Workflow-Reference.md
assets/: SCREENSHOTS_README.md  samples.json
docs/: core-engine-spec.md  development-plan.md  git-lfs.md  gui-spec.md  project-structure-guide.md  release-checklist.md  tui-spec.md  volatility-wrapper-spec.md  workflows-and-plugins.md
docs/adrs/: ADR-0002-dependency-and-volatility-integration.md
docs/user-guides/: cli-guide.md  getting-started.md  gui-guide.md  troubleshooting.md  tui-guide.md
oroitz/: __init__.py
oroitz/bindings/: __init__.py
oroitz/bindings/python/: __init__.py
oroitz/cli/: __init__.py  __main__.py
oroitz/core/: __init__.py  cache.py  config.py  executor.py  output.py  session.py  telemetry.py  workflow.py
oroitz/ui/: __init__.py
oroitz/ui/gui/: __init__.py  __main__.py  about_dialog.py  landing_view.py  main.py  main_window.py  notification_center.py  results_explorer.py  session_dashboard.py  session_wizard.py  settings_dialog.py  theme_manager.py
oroitz/ui/tui/: __init__.py  __main__.py  screens.py
oroitz/ui/tui/controllers/: __init__.py
oroitz/ui/tui/services/: __init__.py
oroitz/ui/tui/styles/: __init__.py  base.css
oroitz/ui/tui/views/: __init__.py  error_view.py  feedback_view.py  help_view.py  home_view.py  results_view.py  run_view.py  session_wizard_view.py  settings_view.py
oroitz/ui/tui/widgets/: __init__.py  breadcrumb.py
results/: benchmark_report.json  full-benchmark.json  large_benchmark_report.json
samples/: README.md
scripts/: build_installers.py  fetch_samples.py  setup_volatility_plugins.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/core/: test_cache.py  test_config.py  test_executor.py  test_executor_retries.py  test_executor_telemetry.py  test_fetch_samples.py  test_output.py  test_session.py  test_workflow.py
tests/ui/: test_gui.py  test_tui.py
tools/: benchmark.py  tui_smoke_check.py
