[tool.poetry]
name = "oroitz"
version = "0.0.1"
description = "Oroitz: cross-platform Volatility 3 wrapper with shared core and multi-interface adapters"
authors = ["Tears Workshop <tearsmysthrala@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tears-mysthrala/Oroitz"
repository = "https://github.com/tears-mysthrala/Oroitz.git"
documentation = "https://github.com/tears-mysthrala/Oroitz/tree/main/docs"
keywords = ["volatility", "forensics", "memory-analysis", "dfir"]
packages = [
  { include = "oroitz" }
]

[tool.poetry.dependencies]
python = "^3.11"
volatility3 = "^2.4.1"
pydantic = "^2.7.0"
rich = "^13.7.0"
textual = "^0.58.0"
PySide6 = "^6.7.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-qt = "^4.4.0"
pytest-textual-snapshot = "^0.3.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"
black = "^24.3.0"
pre-commit = "^3.7.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.0"

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
